@@ -10,7 +10,6 @@ package org.elasticsearch.cluster.metadata;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
-import org.apache.logging.log4j.message.ParameterizedMessage;
 import org.elasticsearch.ElasticsearchException;
 import org.elasticsearch.Version;
 import org.elasticsearch.action.ActionListener;
@@ -50,14 +49,14 @@ import org.elasticsearch.cluster.service.ClusterService;
 import org.elasticsearch.common.Priority;
 import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.UUIDs;
-import org.elasticsearch.common.collect.ImmutableOpenIntMap;
 import org.elasticsearch.common.inject.Inject;
 import org.elasticsearch.common.settings.Setting;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.concurrent.AtomicArray;
 import org.elasticsearch.common.util.concurrent.ConcurrentCollections;
 import org.elasticsearch.common.util.concurrent.CountDown;
-import org.elasticsearch.core.Nullable;
+import org.elasticsearch.common.util.set.Sets;
+import org.elasticsearch.core.SuppressForbidden;
 import org.elasticsearch.core.TimeValue;
 import org.elasticsearch.core.Tuple;
 import org.elasticsearch.index.Index;
@@ -79,13 +78,15 @@ import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.SortedMap;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
+
+import static java.util.stream.Collectors.joining;
+import static org.elasticsearch.core.Strings.format;
 
 /**
  * Service responsible for submitting open/close index requests as well as for adding index blocks
@@ -178,16 +179,16 @@ public class MetadataIndexStateService {
                 try {
                     final Map<Index, ClusterBlock> blockedIndices = new HashMap<>(task.request.indices().length);
                     state = addIndexClosedBlocks(task.request.indices(), blockedIndices, state);
-                    taskContext.success(task.listener.delegateFailure((delegate1, clusterState) -> {
+                    taskContext.success(() -> {
                         if (blockedIndices.isEmpty()) {
-                            delegate1.onResponse(CloseIndexResponse.EMPTY);
+                            task.listener().onResponse(CloseIndexResponse.EMPTY);
                         } else {
                             threadPool.executor(ThreadPool.Names.MANAGEMENT)
                                 .execute(
                                     new WaitForClosedBlocksApplied(
                                         blockedIndices,
                                         task.request,
-                                        delegate1.delegateFailure((delegate2, verifyResults) -> {
+                                        task.listener().delegateFailure((delegate2, verifyResults) -> {
                                             clusterService.submitStateUpdateTask(
                                                 "close-indices",
                                                 new CloseIndicesTask(task.request, blockedIndices, verifyResults, delegate2),
@@ -198,7 +199,7 @@ public class MetadataIndexStateService {
                                     )
                                 );
                         }
-                    }));
+                    });
                 } catch (Exception e) {
                     taskContext.onFailure(e);
                 }
@@ -225,6 +226,7 @@ public class MetadataIndexStateService {
     private class CloseIndicesExecutor implements ClusterStateTaskExecutor<CloseIndicesTask> {
 
         @Override
+        @SuppressForbidden(reason = "consuming published cluster state for legacy reasons")
         public ClusterState execute(ClusterState currentState, List<TaskContext<CloseIndicesTask>> taskContexts) throws Exception {
             ClusterState state = currentState;
             for (final var taskContext : taskContexts) {
@@ -239,7 +241,7 @@ public class MetadataIndexStateService {
                     final List<IndexResult> indices = closingResult.v2();
                     assert indices.size() == task.verifyResults.size();
 
-                    taskContext.success(task.listener.delegateFailure((delegate, clusterState) -> {
+                    taskContext.success(clusterState -> {
                         final boolean acknowledged = indices.stream().noneMatch(IndexResult::hasFailures);
                         final String[] waitForIndices = indices.stream()
                             .filter(result -> result.hasFailures() == false)
@@ -264,14 +266,14 @@ public class MetadataIndexStateService {
                                     // so we maintain a kind of coherency by overriding the shardsAcknowledged value
                                     // (see ShardsAcknowledgedResponse constructor)
                                     boolean shardsAcked = acknowledged ? shardsAcknowledged : false;
-                                    delegate.onResponse(new CloseIndexResponse(acknowledged, shardsAcked, indices));
+                                    task.listener().onResponse(new CloseIndexResponse(acknowledged, shardsAcked, indices));
                                 },
-                                delegate::onFailure
+                                task.listener()::onFailure
                             );
                         } else {
-                            delegate.onResponse(new CloseIndexResponse(acknowledged, false, indices));
+                            task.listener().onResponse(new CloseIndexResponse(acknowledged, false, indices));
                         }
-                    }));
+                    });
                 } catch (Exception e) {
                     taskContext.onFailure(e);
                 }
@@ -365,12 +367,7 @@ public class MetadataIndexStateService {
             blockedIndices.put(index, indexBlock);
         }
 
-        logger.info(
-            () -> new ParameterizedMessage(
-                "closing indices {}",
-                blockedIndices.keySet().stream().map(Object::toString).collect(Collectors.joining(","))
-            )
-        );
+        logger.info(() -> format("closing indices %s", blockedIndices.keySet().stream().map(Object::toString).collect(joining(","))));
         return ClusterState.builder(currentState).blocks(blocks).build();
     }
 
@@ -436,11 +433,7 @@ public class MetadataIndexStateService {
             }
         }
 
-        logger.info(
-            "adding block {} to indices {}",
-            block.name,
-            blockedIndices.keySet().stream().map(Object::toString).collect(Collectors.toList())
-        );
+        logger.info("adding block {} to indices {}", block.name, blockedIndices.keySet().stream().map(Object::toString).toList());
         return Tuple.tuple(ClusterState.builder(currentState).blocks(blocks).metadata(metadata).build(), blockedIndices);
     }
 
@@ -505,16 +498,16 @@ public class MetadataIndexStateService {
                     );
                     state = blockResult.v1();
                     final Map<Index, ClusterBlock> blockedIndices = blockResult.v2();
-                    taskContext.success(task.listener.delegateFailure((delegate1, clusterState) -> {
+                    taskContext.success(() -> {
                         if (blockedIndices.isEmpty()) {
-                            delegate1.onResponse(AddIndexBlockResponse.EMPTY);
+                            task.listener().onResponse(AddIndexBlockResponse.EMPTY);
                         } else {
                             threadPool.executor(ThreadPool.Names.MANAGEMENT)
                                 .execute(
                                     new WaitForBlocksApplied(
                                         blockedIndices,
                                         task.request,
-                                        delegate1.delegateFailure((delegate2, verifyResults) -> {
+                                        task.listener().delegateFailure((delegate2, verifyResults) -> {
                                             clusterService.submitStateUpdateTask(
                                                 "finalize-index-block-["
                                                     + task.request.getBlock().name
@@ -529,7 +522,7 @@ public class MetadataIndexStateService {
                                     )
                                 );
                         }
-                    }));
+                    });
                 } catch (Exception e) {
                     taskContext.onFailure(e);
                 }
@@ -573,10 +566,10 @@ public class MetadataIndexStateService {
                     final List<AddBlockResult> indices = finalizeResult.v2();
                     assert indices.size() == task.verifyResults.size();
 
-                    taskContext.success(task.listener.delegateFailure((delegate, clusterState) -> {
+                    taskContext.success(() -> {
                         final boolean acknowledged = indices.stream().noneMatch(AddBlockResult::hasFailures);
-                        delegate.onResponse(new AddIndexBlockResponse(acknowledged, acknowledged, indices));
-                    }));
+                        task.listener().onResponse(new AddIndexBlockResponse(acknowledged, acknowledged, indices));
+                    });
                 } catch (Exception e) {
                     taskContext.onFailure(e);
                 }
@@ -664,14 +657,13 @@ public class MetadataIndexStateService {
                 return;
             }
 
-            final ImmutableOpenIntMap<IndexShardRoutingTable> shards = indexRoutingTable.getShards();
-            final AtomicArray<ShardResult> results = new AtomicArray<>(shards.size());
-            final CountDown countDown = new CountDown(shards.size());
+            final AtomicArray<ShardResult> results = new AtomicArray<>(indexRoutingTable.size());
+            final CountDown countDown = new CountDown(indexRoutingTable.size());
 
-            for (Map.Entry<Integer, IndexShardRoutingTable> shard : shards.entrySet()) {
-                final IndexShardRoutingTable shardRoutingTable = shard.getValue();
+            for (int i = 0; i < indexRoutingTable.size(); i++) {
+                IndexShardRoutingTable shardRoutingTable = indexRoutingTable.shard(i);
                 final int shardId = shardRoutingTable.shardId().id();
-                sendVerifyShardBeforeCloseRequest(shardRoutingTable, closingBlock, new NotifyOnceListener<ReplicationResponse>() {
+                sendVerifyShardBeforeCloseRequest(shardRoutingTable, closingBlock, new NotifyOnceListener<>() {
                     @Override
                     public void innerOnResponse(final ReplicationResponse replicationResponse) {
                         ShardResult.Failure[] failures = Arrays.stream(replicationResponse.getShardInfo().getFailures())
@@ -795,14 +787,13 @@ public class MetadataIndexStateService {
                 return;
             }
 
-            final ImmutableOpenIntMap<IndexShardRoutingTable> shards = indexRoutingTable.getShards();
-            final AtomicArray<AddBlockShardResult> results = new AtomicArray<>(shards.size());
-            final CountDown countDown = new CountDown(shards.size());
+            final AtomicArray<AddBlockShardResult> results = new AtomicArray<>(indexRoutingTable.size());
+            final CountDown countDown = new CountDown(indexRoutingTable.size());
 
-            for (Map.Entry<Integer, IndexShardRoutingTable> shard : shards.entrySet()) {
-                final IndexShardRoutingTable shardRoutingTable = shard.getValue();
+            for (int i = 0; i < indexRoutingTable.size(); i++) {
+                IndexShardRoutingTable shardRoutingTable = indexRoutingTable.shard(i);
                 final int shardId = shardRoutingTable.shardId().id();
-                sendVerifyShardBlockRequest(shardRoutingTable, clusterBlock, new NotifyOnceListener<ReplicationResponse>() {
+                sendVerifyShardBlockRequest(shardRoutingTable, clusterBlock, new NotifyOnceListener<>() {
                     @Override
                     public void innerOnResponse(final ReplicationResponse replicationResponse) {
                         AddBlockShardResult.Failure[] failures = Arrays.stream(replicationResponse.getShardInfo().getFailures())
@@ -1110,7 +1101,7 @@ public class MetadataIndexStateService {
 
             try {
                 // build an in-order de-duplicated array of all the indices to open
-                final Set<Index> indicesToOpen = new LinkedHashSet<>(taskContexts.size());
+                final Set<Index> indicesToOpen = Sets.newLinkedHashSetWithExpectedSize(taskContexts.size());
                 for (final var taskContext : taskContexts) {
                     Collections.addAll(indicesToOpen, taskContext.getTask().request.indices());
                 }
@@ -1124,17 +1115,7 @@ public class MetadataIndexStateService {
 
                 for (final var taskContext : taskContexts) {
                     final var task = taskContext.getTask();
-                    taskContext.success(new ActionListener<>() {
-                        @Override
-                        public void onResponse(ClusterState clusterState) {
-                            // listener is notified at the end of acking
-                        }
-
-                        @Override
-                        public void onFailure(Exception e) {
-                            task.onFailure(e);
-                        }
-                    }, task);
+                    taskContext.success(task);
                 }
             } catch (Exception e) {
                 for (final var taskContext : taskContexts) {
@@ -1171,7 +1152,7 @@ public class MetadataIndexStateService {
                     512,
                     indexNames
                 );
-                return new ParameterizedMessage("opening indices [{}]", indexNames);
+                return "opening indices [" + indexNames + "]";
             });
 
             final Metadata.Builder metadata = Metadata.builder(currentState.metadata());
@@ -1234,8 +1215,13 @@ public class MetadataIndexStateService {
         }
 
         @Override
-        public void onAllNodesAcked(@Nullable Exception e) {
-            listener.onResponse(AcknowledgedResponse.of(e == null));
+        public void onAllNodesAcked() {
+            listener.onResponse(AcknowledgedResponse.of(true));
+        }
+
+        @Override
+        public void onAckFailure(Exception e) {
+            listener.onResponse(AcknowledgedResponse.of(false));
         }
 
         @Override
